[package]
description = "Csv index with partially cached columns"
edition = "2021"
license = "MIT"
name = "csv-partial-cache"
repository = "https://github.com/imbolc/csv-partial-cache"
version = "0.2.0"

[features]
default = ["cache"]
cache = ["dep:serde_json"]

[dependencies]
csv-line = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", optional = true }
thiserror = "1"
tokio = { version = "1", features = ["fs", "io-util"] }

[dev-dependencies]
rusty-hook = "0.11"
tokio-test = "0.4"
